# Templated-Adafruit-BusIO

./: Adafruit_BusIO_Register_Templated.h  Adafruit_I2CDevice_Templated.h  Adafruit_I2CRegister.h  CMakeLists.txt  LICENSE  README.md  library.properties
